More styles changes

--- a/assets/css/argon.css
+++ b/assets/css/argon.css
@@ -14775,7 +14775,7 @@ textarea[resize='horizontal'] {
 }
 
 .nav-link:hover {
-    color: #5e72e4;
+    color: #2d8471;
 }
 
 .nav-link i:not(.fa) {
@@ -14801,7 +14801,7 @@ textarea[resize='horizontal'] {
 }
 
 .nav-pills .nav-link:hover {
-    color: #485fe0;
+    color: #2d8471;
 }
 
 .nav-pills .nav-link.active,
