updated description class for text sizes

--- a/assets/css/argon.css
+++ b/assets/css/argon.css
@@ -16445,6 +16445,10 @@ p {
     font-size: .875rem;
 }
 
+.description2 {
+    font-size: 1rem;
+}
+
 .heading {
     font-size: .95rem;
     font-weight: 400;
